Fixed scrollbar. Now I need to work on making the comment bubbles fit the text!

--- a/client/src/style/style.mangoPost.css
+++ b/client/src/style/style.mangoPost.css
@@ -96,11 +96,28 @@
     right: 5%;
     height: 180px;
     width: 475px;
-    background-color: deepskyblue;
+    background: rgba(176, 196, 222, 0.35);
     display: flex;
     flex-direction: column;
     overflow-y: hidden;
     border-radius: 10px;
+}
+
+.post-comment-container::-webkit-scrollbar-track {
+    border: none;
+    padding: 2px 0;
+    background: rgba(240, 248, 255, 0.3);
+}
+
+.post-comment-container::-webkit-scrollbar {
+    width: 10px;
+}
+
+.post-comment-container::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    box-shadow: inset 0 0 6px rgba(0,0,0,.01);
+    background-color: rgba(240, 255, 255, 0.6);
+    border: none;
 }
 
 .post-comment-box {
@@ -116,7 +133,7 @@
 .post-comment-avatar{
     width: 60px;
     height: 60px;
-    background-color: blue;
+    background-color: ivory;
     border-radius: 17px;
 }
 
